--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,9 +58,10 @@ button {
     color:aliceblue;
     border-radius: 5px;
     font-size: 16px;
-    margin: auto;
+    margin: 2px;
     padding: 15px 20px;
     cursor: pointer;
+    border: none;
 }
 
 button:hover {
