--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ button {
     color:aliceblue;
     border-radius: 5px;
     font-size: 16px;
-    margin: 2px;
+    margin: auto;
     padding: 15px 20px;
     cursor: pointer;
     border: none;
@@ -106,6 +106,10 @@ li:hover {
 }
 
 li::marker {
+    display: none;
+}
+
+.hidden {
     display: none;
 }
 
