fix score&timer, tutor notes with localstorage, need scores&initials page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ li::marker {
     display: none;
 }
 
+/* end of quiz showing scores and input initials */
 #submitInitials {
     background-color: indigo;
     color: aliceblue;
@@ -129,6 +130,29 @@ li::marker {
     color: aliceblue;
     border: none;
 }
+
+#goback-btn {
+    background-color: indigo;
+    color: aliceblue;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 5px 10px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+#clearhs-btn {
+    background-color: indigo;
+    color: aliceblue;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 5px 10px;
+    margin: 5px;
+    cursor: pointer;
+}
+
 
 @media screen and (max-width: 768px) {
     body {
