--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ button:hover {
 /* QUIZ containers */
 
 /* all questions styled */
-.questions {
+#actualQuestion {
     font-weight: 500;
     display: flex;
     justify-content: center;
